--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ a {
 /* Add some styles for body*/
 body {
   min-height: 100vh;
-  max-width: 1280px;
+  max-width: 100vw;
   margin: 0 auto;
   background: #fafaf9;
   color: #cbd5e1;
